# mrdog

./: Cargo.toml  README.md
src/: cli.rs  main.rs  mrdog.rs
src/mrdog/: change_request.rs  config_storage.rs  printer.rs
src/mrdog/change_request/: github.rs  gitlab.rs
