[package]
name = "mrdog"
version = "0.1.0"
edition = "2021"
description = "MR. Dog groups and watches merge requests across all your *hubs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
